--- a/avenuecodeios/CustomTableViewCell.xib
+++ b/avenuecodeios/CustomTableViewCell.xib
@@ -14,10 +14,10 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="63"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D7M-5w-emt">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D7M-5w-emt">
                         <rect key="frame" x="8" y="8" width="304" height="47"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="13"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -25,7 +25,7 @@
             <connections>
                 <outlet property="itemDescriptionLabel" destination="D7M-5w-emt" id="lro-MP-Lj7"/>
             </connections>
-            <point key="canvasLocation" x="323" y="253"/>
+            <point key="canvasLocation" x="185" y="226"/>
         </tableViewCell>
     </objects>
 </document>
